refactor: Moved assets files

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-< lang="es-es">
+<lang="es-es">
   <head>
     <meta charset="utf-8" />
     <meta
@@ -25,17 +25,17 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Cabin:700"
     />
-    <link rel="stylesheet" href="./fonts/font-awesome.min.css" />
-    <link rel="stylesheet" href="./fonts/ionicons.min.css" />
-    <link rel="stylesheet" href="./fonts/material-icons.min.css" />
-    <link rel="stylesheet" href="./css/Brands.css" />
-    <link rel="stylesheet" href="./css/Contact-Form-Clean.css" />
-    <link rel="stylesheet" href="./css/Features-Clean.css" />
-    <link rel="stylesheet" href="./css/Footer-Clean.css" />
-    <link rel="stylesheet" href="./css/Header-Blue.css" />
-    <link rel="stylesheet" href="./css/style.css" />
-    <link rel="stylesheet" href="./css/Team-Boxed.css" />
-    <link rel="stylesheet" href="./css/Video.css" />
+    <link rel="stylesheet" href="./assets/fonts/font-awesome.min.css" />
+    <link rel="stylesheet" href="./assets/fonts/ionicons.min.css" />
+    <link rel="stylesheet" href="./assets/fonts/material-icons.min.css" />
+    <link rel="stylesheet" href="./assets/css/Brands.css" />
+    <link rel="stylesheet" href="./assets/css/Contact-Form-Clean.css" />
+    <link rel="stylesheet" href="./assets/css/Features-Clean.css" />
+    <link rel="stylesheet" href="./assets/css/Footer-Clean.css" />
+    <link rel="stylesheet" href="./assets/css/Header-Blue.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
+    <link rel="stylesheet" href="./assets/css/Team-Boxed.css" />
+    <link rel="stylesheet" href="./assets/css/Video.css" />
   </head>
 
 
@@ -48,7 +48,7 @@
     <nav class="navbar navbar-light navbar-expand-md fixed-top" id="mainNav">
       <div class="container">
         <a class="navbar-brand" href="#"
-          ><img src="./img/logo.png" style="width: 80px; height: 80px" /></a
+          ><img src="./assets/img/logo.png" style="width: 80px; height: 80px" /></a
         ><button
           data-bs-toggle="collapse"
           class="navbar-toggler navbar-toggler-right"
@@ -113,7 +113,7 @@
             class="col-md-5 col-lg-5 offset-lg-1 offset-xl-0 d-none d-lg-block phone-holder"
           >
             <img
-              src="./img/HeaderMockup.png"
+              src="./assets/img/HeaderMockup.png"
               alt="header-mockup"
               width="700px"
               height="500px"
@@ -128,7 +128,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto">
-            <img class="img-fluid" src="./img/Nosotross.jpg" />
+            <img class="img-fluid" src="./assets/img/Nosotross.jpg" />
           </div>
           <div class="col">
             <h2 class="header">ABOUT US</h2>
@@ -202,7 +202,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-6 align-center">
-            <img class="img-fluid" src="./img/screenshot2.png" />
+            <img class="img-fluid" src="./assets/img/screenshot2.png" />
           </div>
           <div class="col-md-6 p-40">
             <h2>LEARN MORE ABOUT OUR APPLICATION</h2>
@@ -289,8 +289,8 @@
     <!-- Brands Section Start -->
     <div class="brands">
       <a href="#">
-        <img src="./img/instacart.png" /><img src="./img/kickstarter.png" />
-        <img src="./img/lyft.png" /><img src="./img/pinterest.png" />
+        <img src="./assets/img/instacart.png" /><img src="./assets/img/kickstarter.png" />
+        <img src="./assets/img/lyft.png" /><img src="./assets/img/pinterest.png" />
       </a>
     </div>
     <footer class="footer-clean">
@@ -319,9 +319,9 @@
             type="text/javascript"
             src="https://www.gstatic.com/charts/loader.js"
     ></script>
-    <script src="./bootstrap/js/bootstrap.min.js"></script>
-    <script src="./js/navbar.js"></script>
-    <script src="./js/script.js"></script>
+    <script src="./assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="./assets/js/navbar.js"></script>
+    <script src="./assets/js/script.js"></script>
 
 	</body>
 
