--- a/indexES.html
+++ b/indexES.html
@@ -349,7 +349,7 @@
         <img src="assets/img/lyft.png" /><img src="assets/img/pinterest.png" />
       </a>
     </div>
-    <footer class="footer-clean">
+    <footer class="footer-clean" id="contact">
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-sm-4 col-md-3 item">
