feat: Modified decription of user

--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
             <div class="member" data-aos="zoom-in" data-aos-delay="300">
               <div class="pic"><img src="assets/img/Johan.png" class="img-fluid" alt="Ivan"></div>
               <div class="member-info">
-                <h4>Johan Morena</h4>
+                <h4>Johan Moreno</h4>
               </div>
             </div>
           </div>
